--- a/UXO/AndroidManifest.xml
+++ b/UXO/AndroidManifest.xml
@@ -6,22 +6,16 @@
 
     <uses-sdk
         android:minSdkVersion="14"
-        android:targetSdkVersion="16" />
+        android:targetSdkVersion="17" />
 
-    <application
-        android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
-        <activity
-            android:name="com.team9.uxo.MainActivity"
-            android:label="@string/app_name" >
+    
+<application>
+        <activity android:label="@string/app_name"
+          android:name=".MainActivity" android:theme="@android:style/Theme.Holo.Light.DarkActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-    </application>
-
+            </activity>
+</application>
 </manifest>
