--- a/UXO/AndroidManifest.xml
+++ b/UXO/AndroidManifest.xml
@@ -8,14 +8,28 @@
         android:minSdkVersion="14"
         android:targetSdkVersion="17" />
 
-    
-<application>
-        <activity android:label="@string/app_name"
-          android:name=".MainActivity" android:theme="@android:style/Theme.Holo.Light.DarkActionBar">
+    <uses-permission android:name="android.permission.INTERNET" />
+
+    <application>
+        <activity
+            android:name="com.team9.uxo.MainActivity"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.Holo.Light.DarkActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-            </activity>
-</application>
+        </activity>
+
+        <uses-library
+            android:name="com.google.android.maps"
+            android:required="true" />
+
+        <activity
+            android:name="com.team9.uxo.MapsActivity"
+            android:label="@string/title_activity_maps" >
+        </activity>
+    </application>
+
 </manifest>
